fixing margins on mobile screens

--- a/styles/scss/sections/_about.scss
+++ b/styles/scss/sections/_about.scss
@@ -35,6 +35,7 @@
 }
 @media screen and (max-width: 43.125em) {
     .about {
+        margin: 2rem 1rem;
         .about-content {
             display: grid;
             grid-template-columns: 1fr;
@@ -44,7 +45,7 @@
                 grid-column: 1;
             }
             p {
-                margin: 1rem 1.5rem;
+                margin: 1rem 0;
                 // align-self: flex-start;
             }
         }
