--- a/styles/scss/sections/_work.scss
+++ b/styles/scss/sections/_work.scss
@@ -132,12 +132,18 @@
 }
 @media screen and (max-width: 43.125em) {
     .work {
+        margin: 2rem 1rem;
         .work-craft-brewery {
             display: grid;
             grid-template-columns: 1fr;
             grid-template-rows: auto 1fr;
             img {
                 align-self: center;
+            }
+            .craft-brewery-content {
+                h3, p, a {
+                    margin: 1rem 0;
+                }
             }
         }
         .work-agConstruction {
@@ -149,6 +155,11 @@
                 grid-column: 1;
                 align-self: center;
             }
+            .agConstruction-content {
+                h3, p, a {
+                    margin: 1rem 0;
+                }
+            }
         }
         .work-happy-sunshine {
             display: grid;
@@ -156,6 +167,11 @@
             grid-template-rows: auto 1fr;
             img {
                 align-self: center;
+            }
+            .happy-sunshine-content {
+                h3, p, a {
+                    margin: 1rem 0;
+                }
             }
         }
         .work-altJ {
@@ -166,6 +182,11 @@
                 grid-row: 1;
                 grid-column: 1;
                 align-self: center;
+            }
+            .altJ-content {
+                h3, p, a {
+                    margin: 1rem 0;
+                }
             }
         }
     }
